Revision history for Perl extension RPi::WiringPi.

0.03 UNRELEASED
        - added Constants.pm, and tests (standalone module)
        - added $SIG{__DIE__} handler so we can clean up properly on die()
        - added 'fatal_exit' new() param for testing
        - we now catch $SIG{INT} as well, with a test

0.02    2016-08-10
        - implemented getAlt() in Core, and in Pin, mode() with no params
          now returns the current mode of the pin
        - added cleanup()

0.01    2016-08-10
        - initial prototype release
        - added Pin.pm
        - added error checking
        - first round of tests
        - NO_BOARD env var